# sherlock

./: .gitignore  APPROACH.md  Makefile  Procfile  README.md  cli.sh  pyproject.toml  railway.toml  setup.sh  web.sh
.github/workflows/: ci.yml
examples/: README.md  run_example.sh
sherlock/: __init__.py
sherlock/analysis/: __init__.py  analyzer.py  classifier.py  report_json.py  report_md.py  stats.py
sherlock/heuristics/: __init__.py  address_reuse.py  base.py  batch_payment.py  change_detection.py  cioh.py  coinjoin.py  consolidation.py  engine.py  round_number_payment.py
sherlock/parser/: __init__.py  block.py  block_file.py  script.py  transaction_model.py  transaction_parser.py  undo.py  xor.py
sherlock/utils/: __init__.py  hashing.py  io.py  varint.py
tests/: test_block_parsing.py  test_heuristics.py  test_parser.py  test_prevout_resolution.py  test_units.py
web/: server.py
web/static/: app.js  index.html  styles.css
